[package]
name = "xrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
aho-corasick = "0.7.18"
libloading = "0.7.3"
xrdCommon = "0.1.0"
crossbeam-deque = "0.8.1"

[patch.crates-io]
xrdCommon = { path = "externs/xrdCommon" }
