[package]
name = "xrdCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
xrdCommon = "0.1.0"
crossbeam-deque = "0.8.1"

[patch.crates-io]
xrdCommon = { path = "../../xrdCommon" }
